# rtdm

./: README.md  _README.md
RealtimeTrajectoryDataMining/: .pre-commit-config.yaml  README.md  pyproject.toml
RealtimeTrajectoryDataMining/_.github/workflows/: test.yml
RealtimeTrajectoryDataMining/docs/: conf.py
RealtimeTrajectoryDataMining/docs/_templates/: badges.html  github.html  moreinfo.html
RealtimeTrajectoryDataMining/rtdm/: manage.py
RealtimeTrajectoryDataMining/rtdm/backend/: __init__.py  basegeohelper.py  dataframeinterfaces.py  datapointstreamhandler.py  datastructures.py  detectorevaluator.py  disorientationdetectors.py  fields.py  geohashsequenceinterpolator.py  managers.py  models.py  plotutils.py  sequencescorer.py  serializers.py  staypointdetector.py  trajectorysegmentor.py  typealias.py  urls.py  utils.py  views.py  xchanges.py
RealtimeTrajectoryDataMining/rtdm/backend/migrations/: 0001_initial.py  0002_alter_trajectory_color.py  0003_alter_trajectory_color.py
RealtimeTrajectoryDataMining/rtdm/backend/tests/: test_datastructures.py
RealtimeTrajectoryDataMining/rtdm/scripts/: README.md  anomaly-detection-test.ipynb  case-study-1.ipynb  case-study-2.py  interpolation-test.ipynb  main.py
RealtimeTrajectoryDataMining/rtdm/scripts/data/: README.md  case_study_2.json  case_study_3.json
RealtimeTrajectoryDataMining/rtdm/stream_handler/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
SyntheticTrajectoryGenerator/: .gitignore  docker-compose.yml  overpass.env  requirements.txt  valhalla.env
SyntheticTrajectoryGenerator/custom_files/: valhalla.json
SyntheticTrajectoryGenerator/notebooks/: TrajGen.py  libtest-init-clean-v1.ipynb  libtest-init-clean-v2-large-example-illust.ipynb  libtest-init-clean-v2-large-example-v1.ipynb  libtest-init-clean-v2-large-example-v2-test.ipynb  libtest-init-clean-v2-large-example-v2.ipynb  libtest-init-clean-v2-small-example-test.ipynb  libtest-init-clean-v2-small-example.ipynb  libtest-init.ipynb  main_data_deviating.json  main_data_looping.json  preprocessing_case.json  preprocessing_case_test.json  segement_test.json  valhalla_testing-Copy1.ipynb  valhalla_testing-Copy2-backup0.ipynb  valhalla_testing-Copy2.ipynb  valhalla_testing.ipynb
SyntheticTrajectoryGenerator/notebooks/gpsdata/: 20200810.gpx  20200812.gpx  20200820.gpx  20200906.gpx  20200907.gpx  20200908.gpx  20200925.gpx  20200930.gpx  20201002.gpx  20201012.gpx  20201014.gpx  20201016.gpx  20201018.gpx  20201020.gpx  20201021.gpx  20201022.gpx  20201029.gpx  20201031.gpx  20201103.gpx  20201128.gpx  20201224.gpx  20201227.gpx  20210105.gpx  20210110.gpx  20210111.gpx  20210119.gpx  20210120.gpx  20210121.gpx  20210122.gpx  20210123.gpx  20210124.gpx  20210128.gpx  20210131.gpx  20210201.gpx  20210202.gpx  20210203.gpx  20210204.gpx  20210205.gpx  20210206.gpx  20210211.gpx  (+5 more)
SyntheticTrajectoryGenerator/web_backend/: DataPoint.py  Dockerfile  entrypoint.sh  manage.py  req.txt
SyntheticTrajectoryGenerator/web_backend/backend/: consumers.py  managers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
SyntheticTrajectoryGenerator/web_backend/tests/: DataPointStreamTest.ipynb  load_datapoints.py  settings.py  test_utilities.py
SyntheticTrajectoryGenerator/web_backend/tsanomdet/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
SyntheticTrajectoryGenerator/web_frontend/: backup_package.json  package.json
SyntheticTrajectoryGenerator/web_frontend/public/: index.html
SyntheticTrajectoryGenerator/web_frontend/src/: App.js  Map.js  Post.js  index.js  map.css
(+78 files in other folders)
