[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "rtdm"
version = "0.1.0"
description = "A codebase containing different tools for processing realtime trajectory data."
license = "MIT"
authors = ["Nicklas Sindlev Andersen <sindlev@imada.sdu.dk>"]
readme = "README.md"
repository = "https://github.com/NicklasXYZ/RealtimeTrajectoryDataMining"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
# See https://python-poetry.org/docs/dependency-specification/
python = ">=3.8,<3.11"
scikit-learn = "^1.0"
pandas = "^1.3.3"
numpy = "^1.21.2"
djangorestframework = "^3.12.4"
redis = "^3.5.3"
jupyterlab = "^3.1.14"
ruuid = "^0.3.1"
folium = "^0.12.1"
geohash-hilbert = "^1.4.0"
gpxpy = "^1.4.2"
utm = "^0.7.0"
Shapely = "^1.7.1"
biopython = "^1.79"
prefixspan = "^0.5.2"
python-louvain = "^0.15"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^6"
pytest-cov = "^2.7"
pytest-mock = "^3.1.0"

sphinx = "^2.2"
sphinx-autoapi = "^1.3.0"
# used in docs to include markdown files
m2r = "^0.2"
# used in docs to parse pyproject.toml
tomlkit = "^0.6"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

# Extra options:
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--cov=rtdm",
  "--cov-report=term:skip-covered",
  "--cov-report=html",
  "--cov-branch",
  "--cov-append",
  ]
